# 5laba_3semestr

./: CMakeCache.txt  CMakeLists.txt  Cell.cpp  Cell.h  GraphicalMinesweeperGame.cpp  GraphicalMinesweeperGame.h  Makefile  MineCell.cpp  MineCell.h  MineField.cpp  MineField.h  MinesweeperGame.cpp  MinesweeperGame.h  README.md  SafeCell.cpp  SafeCell.h  cell.go  cmake_install.cmake  game.go  go.mod  main.cpp  main.go  main_graphical.cpp  minefield.go  minesweeper  minesweeper-graphical
